# internal/api/http/web/handler/user_handler.go
@@ -27,6 +27,7 @@ func NewUserHandler(userService *service.UserService, logger *zap.Logger) *UserH
 }
 
 // CreateUser godoc
+//	@ID				CreateUser
 //	@Summary		Create User
 //	@Description	Creates a new User
 //	@Tags			user
@@ -56,6 +57,7 @@ func (h *UserHandler) CreateUser(c *gin.Context) {
 }
 
 // ListUsers godoc
+//	@ID				ListUsers
 //	@Summary		List Users
 //	@Description	Retrieves a list of Users
 //	@Tags			user
@@ -85,6 +87,7 @@ func (h *UserHandler) ListUsers(c *gin.Context) {
 }
 
 // GetUser godoc
+//	@ID				GetUser
 //	@Summary		Get User
 //	@Description	Retrieves a single User
 //	@Tags			user
@@ -120,6 +123,7 @@ func (h *UserHandler) GetUser(c *gin.Context) {
 }
 
 // GetUserFormData godoc
+//	@ID				GetUserFormData
 //	@Summary		Get User Form Data
 //	@Description	Retrieves a single User Form Data
 //	@Tags			user
@@ -150,6 +154,7 @@ func (h *UserHandler) GetUserFormData(c *gin.Context) {
 }
 
 // UpdateUser godoc
+//	@ID				UpdateUser
 //	@Summary		Update User
 //	@Description	Updates an existing User
 //	@Tags			user
@@ -180,6 +185,7 @@ func (h *UserHandler) UpdateUser(c *gin.Context) {
 }
 
 // UpdateUserEnabled godoc
+//	@ID				UpdateUserEnabled
 //	@Summary		Update User Enabled
 //	@Description	Updates an existing User Enabled
 //	@Tags			user
@@ -210,6 +216,7 @@ func (h *UserHandler) UpdateUserEnabled(c *gin.Context) {
 }
 
 // DeleteUser godoc
+//	@ID				DeleteUser
 //	@Summary		Delete User
 //	@Description	Deletes an existing User
 //	@Tags			user
